# wam-harness

./: .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE.md  README.md  README.zh-CN.md  pyproject.toml
.collab/: PIPELINE.md  PROGRESS.md  WORKFLOW.md
.collab/papers/: README.md
.collab/papers/_TEMPLATE/: S0-source.md  S1-understanding.md  S2-existence-check.md  S3-transfer.md  S4-results.md  S5-findings.md
.collab/schema/: result.schema.json
.collab/tasks/: _TEMPLATE.md
.github/workflows/: .gitkeep
configs/: README.md
containers/: README.md
containers/core/: Dockerfile
containers/cosmos-policy/: Dockerfile  native-smoke.sh
containers/dreamzero/: Apptainer.def  Dockerfile  native-smoke.sh
containers/fastwam/: Apptainer.def  Dockerfile  native-smoke.sh
docs/: backends.md  cli_entrypoints.md  config_schema.md  contract.md  dependency_isolation.md  design.md  fastwam_libero_eval_setup.md  interfaces.md  measurement.md  native_backend_design.md  next_goal.md  optimization_integration.md  phase1_plan.md  product_direction.md  reference_repos.md  roadmap.md  runner.md  runtime_abstraction.md  systems_ideas.md  trace_schema.md  wamfile.md
docs/archive/: architecture_analysis_2026-06-04.md
examples/fastwam_libero/: README.md  obs.json
examples/open_loop/: README.md
scripts/: README.md  fastwam-libero-eval.sh  run_codex_task.sh  setup_core_env.sh  setup_fastwam_native_env.sh
src/eazywam/: __init__.py  __main__.py  cli.py  cli_render.py  defaults.py  model_entry_labels.py  serve.py
src/eazywam/backends/: cosmos_policy.py  dreamzero.py  fake.py  fastwam.py  native.py
src/eazywam/backends/native_support/: __init__.py  contract.py  optimizations.py  runtime.py  smoke.py
src/eazywam/compat/: fastwam_robotwin_manager.py
src/eazywam/compat/dreamzero_eval/: policy_client.py
src/eazywam/core/: __init__.py  action_contract.py  action_summary.py  assets.py  backend_capabilities.py  backend_session.py  eval_runner.py  inference_trace.py  invocation.py  manifest.py  memory.py  model_entry.py  observation_io.py  preflight.py  registry.py  runner.py  runtime.py  tracing.py  types.py
src/eazywam/evals/: acceptance.py  libero.py  robotwin.py
src/eazywam/manifests/: __init__.py  cosmos-policy-libero.yaml  dreamzero-droid-sim.yaml  fake-open-loop.yaml  fastwam-libero.yaml  fastwam-robotwin.yaml
src/eazywam/processors/: __init__.py  cosmos_policy_libero.py  dreamzero_droid.py  fastwam_libero.py  fastwam_robotwin.py  output_summary.py  passthrough.py  smoke.py
src/eazywam/workloads/: open_loop.py  processor_smoke.py  single_observation.py
src/fastwam/: VENDORED.md  runtime.py
src/fastwam/models/wan22/: cuda_graph.py  fastwam.py  mot.py
src/wam_harness/: __init__.py  __main__.py  cli.py  cli_render.py  defaults.py  model_entry_labels.py  serve.py
src/wam_harness/backends/: cosmos_policy.py  dreamzero.py  fake.py  fastwam.py  native.py
src/wam_harness/backends/native_support/: contract.py  optimizations.py  runtime.py  smoke.py
src/wam_harness/cli/: .gitkeep
src/wam_harness/compat/dreamzero_eval/: serve_dreamzero_no_compile.py
src/wam_harness/core/: __init__.py  _utils.py  action_contract.py  action_summary.py  assets.py  backend_capabilities.py  backend_session.py  compare.py  eval_runner.py  inference_trace.py  invocation.py  manifest.py  model_entry.py  model_entry_labels.py  native_contract.py  native_readiness.py  native_smoke.py  observation_io.py  registry.py  runner.py  runtime.py  tracing.py  types.py
src/wam_harness/evals/: __init__.py  acceptance.py  libero.py
src/wam_harness/manifests/: dreamzero-droid-sim.yaml  fake-open-loop.yaml  fastwam-libero.yaml
src/wam_harness/processors/: cosmos_policy_libero.py  dreamzero_droid.py  fastwam_libero.py  output_summary.py  passthrough.py
src/wam_harness/workloads/: open_loop.py  processor_smoke.py  single_observation.py
tests/: README.md  test_action_contract.py  test_backend_lifecycle.py  test_cli.py  test_compare.py  test_container_recipes.py  test_eval_acceptance.py  test_eval_runner.py  test_fake_backend.py  test_fastwam_cuda_graph.py  test_fastwam_native.py  test_fastwam_robotwin_manager.py  test_inference_trace.py  test_manifest.py  test_native_backends.py  test_native_runtime.py  test_native_smoke.py  test_prepare_assets.py  test_processor_output_summary.py  test_registry.py  test_runner.py  test_serve.py
