[project]
name = "wam-harness"
version = "0.0.0"
description = "An Ollama-like deployment harness for world-action model inference."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "TBD" }
authors = [
  { name = "TBD" }
]
keywords = [
  "world-action-model",
  "robotics",
  "inference",
  "benchmark",
  "harness"
]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Scientific/Engineering :: Artificial Intelligence"
]
dependencies = [
  "huggingface-hub>=0.24",
  "pyyaml>=6.0",
  "socksio>=1.0"
]

[project.scripts]
wam = "wam_harness.cli:main"

[dependency-groups]
dev = [
  "pytest>=8.0",
  "ruff>=0.8"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/wam_harness", "src/fastwam"]

[tool.uv]
package = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
exclude = [
  ".git",
  ".local",
  ".pytest_cache",
  ".ruff_cache",
  ".venv",
  "dist",
  "logs",
  "runs",
  "src/fastwam"
]
