[project]
name = "eazywam"
version = "0.1.0"
description = "An open-source deployment and acceleration harness for world-action models."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Qianli Liu" }
]
keywords = [
  "world-action-model",
  "robotics",
  "inference",
  "benchmark",
  "harness"
]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Scientific/Engineering :: Artificial Intelligence"
]
dependencies = [
  "huggingface-hub>=0.24",
  "pyyaml>=6.0",
  "socksio>=1.0"
]

[project.urls]
Homepage = "https://github.com/Liu-KM/eazywam"
Repository = "https://github.com/Liu-KM/eazywam"
Issues = "https://github.com/Liu-KM/eazywam/issues"
Documentation = "https://github.com/Liu-KM/eazywam#readme"

[project.scripts]
wam = "eazywam.cli:main"
eazywam = "eazywam.cli:main"

[dependency-groups]
dev = [
  "pytest>=8.0",
  "ruff>=0.8"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/eazywam", "src/fastwam"]

[tool.uv]
package = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
exclude = [
  ".git",
  ".local",
  ".pytest_cache",
  ".ruff_cache",
  ".venv",
  "dist",
  "logs",
  "runs",
  "src/fastwam"
]
